2020-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Magick++/Drawable.h: Decided to continue using
	std::unary_function if C++ version is less than C++'17 since
	otherwise it may be changing an interface.

2020-11-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c (ReadGIFImage): Use resource-limited memory
	allocator when reading the comment extension.

	* Magick++/lib/Magick++/Drawable.h: Remove inheritance from
	std::unary_function, which was removed in C++'17.

	* coders/webp.c (ReadWEBPImage): Use resource-limited memory
	allocator.
	(WriteWEBPImage): Use resource-limited memory allocator.

	* coders/jbig.c (WriteJBIGImage): Use resource-limited memory
	allocator.

	* coders/fits.c (ReadFITSImage): Use resource-limited memory
	allocator.
	(WriteFITSImage): Use resource-limited memory allocator.

	* coders/dib.c (ReadDIBImage): Use resource-limited memory
	allocator.
	(WriteDIBImage): Use resource-limited memory allocator.

	* coders/bmp.c (ReadBMPImage): Use resource-limited memory
	allocator.
	(WriteBMPImage): Use resource-limited memory allocator.

2020-11-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Improve RGBATiledMethod progress
	monitor so it reports more steps.
	(ReadTIFFImage): Improve TiledMethod progress monitor so it
	reports more steps.

	* fuzzing/utils.cc (class MagickState): Enable tracing of
	exception events in order to help discover the origin of errors.
	If too much output comes out, then this will be removed.

	* magick/render.c (ConvertPathToPolygon): Attempt to fix leak of
	'points' on memory allocation failure.

2020-11-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ConvertPathToPolygon): Make sure not to leak
	points from added Edge.  Fixes oss-fuzz 27608 "Direct-leak in
	_MagickReallocateResourceLimitedMemory".
	(DrawDashPolygon): Place an aribrary limit on stroke dash polygon